version semifinal